Quick Fix Gap...

--- a/src/screens/HomeScreen/ui/03-Library/Library.module.scss
+++ b/src/screens/HomeScreen/ui/03-Library/Library.module.scss
@@ -19,7 +19,7 @@
       max-width: 100%;
       display: grid;
       overflow: hidden;
-      gap: 1.8518518519vw;
+      gap: 2rem;
       grid-template-columns: repeat(4, 1fr);
 
       @media screen and (max-width: 1120px) {
